Fix button small icon only size and support a popup class

--- a/projects/sparkle-ui/styles/components/sparkle-button.component.scss
+++ b/projects/sparkle-ui/styles/components/sparkle-button.component.scss
@@ -75,6 +75,10 @@ $sparkleButton: true !default;
 
       padding: p2r(0 8);
       gap: p2r(4);
+
+      &:has(spk-icon:only-child) {
+        padding: p2r(0 6);
+      }
     }
 
     &[disabled] {
